--- a/us_uganda_copd.ipynb
+++ b/us_uganda_copd.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "https://github.com/dqminhv/owid-copd-us-uganda/blob/main/us_uganda_copd.ipynb",
-      "authorship_tag": "ABX9TyMtS+DlTX7o//hicHET3H8F",
+      "authorship_tag": "ABX9TyOGrJQNBY2dcnhCIM31gVYb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,17 +31,44 @@
     {
       "cell_type": "markdown",
       "source": [
+        "This work book calculates the crude death rate and age-standardized death rate from chronic obstructive pulmonary disease (COPD) in the United States and Uganda in 2019. To obtain the results, the following steps are taken.\n",
         "\n",
-        "To calculate both the crude death rate and the age-standardized death rate for chronic obstructive pulmonary disease (COPD) for all ages in both the United States and Uganda for 2019, you would typically follow these steps:\n",
         "\n",
-        "1. Obtain age-specific death rates from COPD for both the United States and Uganda\n",
-        "in 2019. These data can usually be obtained from national health departments, statistical agencies, or international health organizations such as the World Health Organization (WHO).\n",
         "\n",
-        "2. Calculate the crude death rate for COPD for each country by summing up the number of deaths from COPD for all age groups and dividing by the total population of the country for the same year. The formula for crude death rate is:\n",
+        "1. ***Data collection***\n",
+        ">* **Age-specific death rates from COPD for both the United States and Uganda in 2019**: Provided by Our World in Data.\n",
+        ">* **Age-standardized population**: Obtain from WHO Standard Population — Table 1 in 'Ahmad OB, Boschi-Pinto C, Lopez AD, Murray CJ, Lozano R, Inoue M (2001). Age standardization of rates: a new WHO standard.' The data\n",
+        ">* **United States and Uganda population in 2019 in 5-year age groups**: Obtained from UN World Population Prospects (2022) — Population Estimates 1950-2021\n",
         "\n",
-        "where the result is typically expressed per 1,000 population.\n",
+        "2. ***Formula***\n",
         "\n",
-        "3. Calculate the age-standardized death rate for COPD for each country. Age-standardization allows for the comparison of death rates between populations with different age distributions by adjusting for age differences. This is important because the risk of death from COPD can vary by age. The age-standardized death rate is usually expressed per 100,000 population."
+        ">*   Pi: Population of age group i\n",
+        ">*   Di: Death rate from COPD of age group i\n",
+        ">*   APi: Age-standardized population of age group i\n",
+        "\n",
+        "> a. Crude death rate by COPD\n",
+        ">>General formula: **Total death by COPD / Total population**\n",
+        "\n",
+        ">>Total death by COPD is calculated by  **SUM(Di * Pi) / SUM(Pi)**\n",
+        "\n",
+        "> b. Age-standardized death rate by COPD\n",
+        ">>General formula: **Total death by COPD / Total population**\n",
+        "\n",
+        ">>Age-standardized death rate by COPD is calculated by  **SUM(Di * SUM(Pi) * APi) / SUM(Pi)**\n",
+        "\n",
+        "\n",
+        "3. ***Result***\n",
+        "\n",
+        "\n",
+        "* **Crude death rate** for COPD of the ***US*** in 2019 is **56.9** per 100,000\n",
+        "* **Crude death rate** for COPD of ***Uganda*** in 2019 is **5.8** per 100,000\n",
+        "* **Age-standardized death rate** for COPD of the ***US*** in 2019 is **28.4** per 100,000\n",
+        "* **Age-standardized death rate** for COPD of ***Uganda*** in 2019 is **28.7** per 100,000\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "4M_AiG556hbT"
@@ -129,7 +156,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 2.Grouping age groups from 85+ together"
+        "# 2.Grouping age groups above 85+ together"
       ],
       "metadata": {
         "id": "gBtWwWZ5Eb6H"
@@ -257,11 +284,11 @@
         "print('Crude death rate for COPD of the US in 2019 is {} per 100,000'.format(round(us_crude_death_rate_2019, 1)))"
       ],
       "metadata": {
-        "id": "hrWyWhS1PA72",
-        "outputId": "80593f69-6504-49e0-f5af-0f5b0497f15a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hrWyWhS1PA72",
+        "outputId": "80593f69-6504-49e0-f5af-0f5b0497f15a"
       },
       "execution_count": 11,
       "outputs": [
@@ -302,11 +329,11 @@
         "print('Crude death rate for COPD of Uganda in 2019 is {} per 100,000'.format(round(uganda_crude_death_rate_2019, 1)))"
       ],
       "metadata": {
-        "id": "5FbkYPyQRbaH",
-        "outputId": "d043ba43-02f3-4655-b56a-fc28a8970611",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5FbkYPyQRbaH",
+        "outputId": "d043ba43-02f3-4655-b56a-fc28a8970611"
       },
       "execution_count": 13,
       "outputs": [
@@ -370,11 +397,11 @@
         "print('Age-standardized death rate for COPD of the US in 2019 is {} per 100,000'.format(round(us_age_std_death_rate_2019, 1)))"
       ],
       "metadata": {
-        "id": "w8rJm5jVQwaW",
-        "outputId": "4b10fff4-da70-4917-febd-c18c3922a561",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "w8rJm5jVQwaW",
+        "outputId": "4b10fff4-da70-4917-febd-c18c3922a561"
       },
       "execution_count": 16,
       "outputs": [
@@ -428,11 +455,11 @@
         "print('Age-standardized death rate for COPD of Uganda in 2019 is {} per 100,000'.format(round(uganda_age_std_death_rate_2019, 1)))"
       ],
       "metadata": {
-        "id": "IRjuH52GSCbH",
-        "outputId": "296b2c24-1bf7-4ce2-b0dc-82389c15829f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "IRjuH52GSCbH",
+        "outputId": "296b2c24-1bf7-4ce2-b0dc-82389c15829f"
       },
       "execution_count": 19,
       "outputs": [
